# gamebridge

./: .gitignore  Cargo.toml  README.md  README.org  shell.nix
contrib/sm64pc/: controller_gamebridge.c  controller_gamebridge.h  gamebridge_config.patch  gamebridge_no_lives.patch
src/: au.rs  controller.rs  main.rs  twitch.rs
