[package]
name = "gamebridge"
version = "0.1.0"
authors = ["Cadey Ratio <cadey@firemail.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitflags = "1.2"
kankyo = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "0.2", features = ["full", "macros"] }
twitchchat = "0.10"
